    activated if you are building against unstable/sid and should
    be used manually only if you realy know what you are doing.
    Notice: if something fails inside building the base chroot/
    debootstrap system we can't do anything via grml-live for you
    right now. Instead grab http://daily.grml.org/base.tgz
    and place that at $NFSROOT/nfsroot/live/filesystem.dir/var/tmp/base.tgz
  * Replaced /etc/grml/fai/files/etc/apt/preferences
    with /etc/grml/fai/apt/preferences so grml-live repository
    can be used and configured at a single place.
  * Use apt-pinning via /etc/grml/fai/config/hooks/instsoft.GRMLBASE
    already and remove it from /etc/grml/fai/config/scripts/GRMLBASE/33-aptsetup
  * Display version number of grml-live.
  * Log executed grml-live command line.
  * Set FAI_DEBOOTSTRAP_OPTS="--exclude=dhcp-client,info"
    by default.
  * Set $SECONDS to unknown if $start_seconds is not set.
  * Log closing signs (----...) via bailout to make sure they are
    always set - even when exiting with an error.
  * Check for presence of /bin/zsh before setting default shell in
    /etc/grml/fai/config/scripts/GRMLBASE/21-usersetup
  * Add new packages to GRML_FULL:
    - ldnsutils
    - madwifi-modules-2.6.23-grml
    - linux-wlan-ng-modules-2.6.23-grml
  * Add new packages to GRML_MEDIUM:
    - alsa-base
    - alsa-tools
    - alsa-utils
    - ed
    - pcmciautils
    - Update kernel version to 2.6.23-grml
    - replace dhcp-client with dhcp3-client
  * Add ed package to GRML_SMALL and replace dhcp-client with
    dhcp3-client.
  * Use new kernel version 2.6.23-grml64 for amd64.

 -- Michael Prokop <mika@grml.org>  Sat, 20 Oct 2007 12:12:33 +0200

grml-live (0.0.6) unstable; urgency=low

  * New option "-a" for setting architecture. This allows building
    grml(32) on amd64.
  * Fix stderr redirection in "/usr/sbin/fai already running..."
  * Update /etc/grml/fai/make-fai-nfsroot.conf