@@ -31,13 +31,13 @@ install: build
 	dh_testroot
 	dh_clean -k 
 	dh_installdirs etc/grml/fai/live-initramfs usr/sbin usr/share/doc/grml-live \
-	  	       usr/share/grml-live usr/share/grml-live/examples \
-		       usr/share/grml-live/buildd
+	  	       usr/share/grml-live usr/share/grml-live/buildd
 
 	# Add here commands to install the package into debian/grml-live.
 	cp -a etc         debian/grml-live/
 	cp -a examples    debian/grml-live/usr/share/doc/grml-live/
 	cp -a templates   debian/grml-live/usr/share/grml-live/
+	cp -a scripts     debian/grml-live/usr/share/grml-live/
 	cp -a buildd/*.sh debian/grml-live/usr/share/grml-live/buildd/
 	install -o root -m 640 buildd/grml-buildd.conf debian/grml-live/etc/grml/grml-buildd.conf
 	install -o root -m 755 grml-live debian/grml-live/usr/sbin/grml-live
